Fix label width focring wrapping by default

--- a/core/style.scss
+++ b/core/style.scss
@@ -50,7 +50,7 @@ input, style, button {
 }
 
 input[type=textbox] {
-    width: 10em;
+    width: 11em;
 }
 
 @import "./range";
